feat: mock data, join word and metadata